Bug 343036, SAXParser crashes with references to JS-defined object attached to XPCOM component, r+sr=peterv