parser/xml/src/nsSAXXMLReader.cpp
@@ -301,7 +301,7 @@ nsSAXXMLReader::ReportError(const PRUnichar* aErrorText,
 NS_IMETHODIMP
 nsSAXXMLReader::GetBaseURI(nsIURI **aBaseURI)
 {
-  *aBaseURI = mBaseURI;
+  NS_IF_ADDREF(*aBaseURI = mBaseURI);
   return NS_OK;
 }
 
@@ -315,7 +315,7 @@ nsSAXXMLReader::SetBaseURI(nsIURI *aBaseURI)
 NS_IMETHODIMP
 nsSAXXMLReader::GetContentHandler(nsISAXContentHandler **aContentHandler)
 {
-  *aContentHandler = mContentHandler;
+  NS_IF_ADDREF(*aContentHandler = mContentHandler);
   return NS_OK;
 }
 
@@ -329,7 +329,7 @@ nsSAXXMLReader::SetContentHandler(nsISAXContentHandler *aContentHandler)
 NS_IMETHODIMP
 nsSAXXMLReader::GetDtdHandler(nsISAXDTDHandler **aDtdHandler)
 {
-  *aDtdHandler = mDTDHandler;
+  NS_IF_ADDREF(*aDtdHandler = mDTDHandler);
   return NS_OK;
 }
 
@@ -343,7 +343,7 @@ nsSAXXMLReader::SetDtdHandler(nsISAXDTDHandler *aDtdHandler)
 NS_IMETHODIMP
 nsSAXXMLReader::GetErrorHandler(nsISAXErrorHandler **aErrorHandler)
 {
-  *aErrorHandler = mErrorHandler;
+  NS_IF_ADDREF(*aErrorHandler = mErrorHandler);
   return NS_OK;
 }
 
@@ -369,7 +369,7 @@ nsSAXXMLReader::GetFeature(const nsAString &aName, PRBool *aResult)
 NS_IMETHODIMP
 nsSAXXMLReader::GetLexicalHandler(nsISAXLexicalHandler **aLexicalHandler)
 {
-  *aLexicalHandler = mLexicalHandler;
+  NS_IF_ADDREF(*aLexicalHandler = mLexicalHandler);
   return NS_OK;
 }
 
